--- a/src/pages/list/bestand/bestand.component.html
+++ b/src/pages/list/bestand/bestand.component.html
@@ -5,6 +5,7 @@
 
 <!-->
 <ion-datetime placeholder="med.getablaufdatum()|date:'dd.MM.yyyy'"displayFormat="DD.MM.YYYY" pickerFormat="DD/MM/YYYY" [(ngModel)]="textfeld"></ion-datetime>
+zu Testzwecken
 <-->
 
 <ion-item>
