--- a/src/pages/list/bestand/bestand.component.html
+++ b/src/pages/list/bestand/bestand.component.html
@@ -5,7 +5,8 @@
 
 <!-->
 <ion-datetime placeholder="med.getablaufdatum()|date:'dd.MM.yyyy'"displayFormat="DD.MM.YYYY" pickerFormat="DD/MM/YYYY" [(ngModel)]="textfeld"></ion-datetime>
-zu Testzwecken
+zu Testzwecken 
+Erweiterung
 <-->
 
 <ion-item>
