Datumverarbeitung über Long-Value

--- a/src/pages/list/bestand/bestand.component.html
+++ b/src/pages/list/bestand/bestand.component.html
@@ -5,12 +5,10 @@
 
 <!-->
 <ion-datetime placeholder="med.getablaufdatum()|date:'dd.MM.yyyy'"displayFormat="DD.MM.YYYY" pickerFormat="DD/MM/YYYY" [(ngModel)]="textfeld"></ion-datetime>
-zu Testzwecken 
-Erweiterung
 <-->
 
 <ion-item>
 <ion-label>Bestand</ion-label>
-<ion-input type="text" value="med.getbestand()" [(ngModel)]="bestandzahl"></ion-input>
+<ion-input type="text" [(ngModel)]="bestandzahl"></ion-input>
 </ion-item>
 
