Datum- und Betragseingabe

--- a/src/pages/list/bestand/bestand.component.html
+++ b/src/pages/list/bestand/bestand.component.html
@@ -1,6 +1,6 @@
 <ion-item>
 <ion-label stacked>Ablauf-datum</ion-label>
-<ion-datetime displayFormat="DD.MM.YYYY" pickerFormat="DD/MM/YYYY" [(ngModel)]="ablaufdatum"></ion-datetime>
+<ion-datetime displayFormat="DD.MM.YYYY" pickerFormat="DD/MM/YYYY" max="2030" [(ngModel)]="ablaufdatumstring"></ion-datetime>
 </ion-item>
 
 <!-->
