--- a/src/pages/list/med-page/med-page.component.html
+++ b/src/pages/list/med-page/med-page.component.html
@@ -50,7 +50,7 @@
       <ion-input type="text" [value]="med.getkategorie()" readonly="true"></ion-input>
     </ion-item>
 
-    <bestand></bestand>
+    <bestand [initablaufdatum]="initablaufdatum" [initbestand]="initbestand"></bestand>
 
     <ion-item>
       <ion-label stacked>ist Abgelaufen</ion-label>
