--- a/src/pages/list/med-detail/med-detail.component.html
+++ b/src/pages/list/med-detail/med-detail.component.html
@@ -5,5 +5,10 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-textarea type="text" [value]="inhalt" readonly="true"></ion-textarea>
+  <ion-card >
+    <p id='mytestid'>
+    </p>
+  </ion-card>
+
+  <!-- <ion-textarea type="text" [value]="inhalt" readonly="true"></ion-textarea> -->
 </ion-content>
