MedDetail auf Slides umgestellt

--- a/src/pages/list/med-detail/med-detail.component.html
+++ b/src/pages/list/med-detail/med-detail.component.html
@@ -4,11 +4,57 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <ion-card >
-    <p id='mytestid'>
-    </p>
-  </ion-card>
+<ion-content>
+  <ion-slides #meddetailslides>
 
-  <!-- <ion-textarea type="text" [value]="inhalt" readonly="true"></ion-textarea> -->
+    <ion-slide>
+      <h1>Anwendungsgebiet</h1>
+      <ion-card>
+        <p id='idanwendungsgebiet'>
+        </p>
+      </ion-card>
+    </ion-slide>
+
+    <ion-slide>
+      <h1>Wirkstoffe</h1>
+      <ion-card>
+        <p id='idwirkstoffe'>
+        </p>
+      </ion-card>
+    </ion-slide>
+
+    <ion-slide>
+      <h1>Wirkungsweise</h1>
+      <ion-card>
+        <p id='idwirkungsweise'>
+        </p>
+      </ion-card>
+    </ion-slide>
+
+    <ion-slide>
+      <h1>Gegenanzeigen</h1>
+      <ion-card>
+        <p id='idgegenanzeigen'>
+        </p>
+      </ion-card>
+    </ion-slide>
+
+    <ion-slide>
+      <h1>Dosierung</h1>
+      <ion-card>
+        <p id='iddosierung'>
+        </p>
+      </ion-card>
+    </ion-slide>
+
+    <ion-slide>
+      <h1>Entsorgung</h1>
+      <ion-card>
+        <p id='identsorgung'>
+        </p>
+      </ion-card>
+    </ion-slide>
+
+  </ion-slides>
+
 </ion-content>
